<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context="com.example.newspyfall.MainActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/users_recycler_view"
        android:layout_width="334dp"
        android:layout_height="380dp"
        android:textAlignment="textStart"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/start_button"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="135dp"
        android:layout_height="54dp"
        android:layout_marginBottom="92dp"
        android:padding="0dp"
        android:text="@string/start"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="135dp"
        android:layout_height="54dp"
        android:layout_marginBottom="28dp"
        android:padding="0dp"
        android:text="@string/settings"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="119dp"
        android:layout_height="46dp"
        android:layout_marginEnd="236dp"
        android:text="@string/playerList"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/users_recycler_view"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:padding="0dp"
        android:text="@string/addPlayer"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/users_recycler_view" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:padding="0dp"
        android:text="@string/reset"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/add_button"
        app:layout_constraintBottom_toBottomOf="@id/add_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>



